[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menus/images/LogoCheeky.png" type="Texture" id=1]
[ext_resource path="res://Menus/images/ohio.png" type="Texture" id=2]
[ext_resource path="res://Menus/images/54-Theme-Curses.png" type="Texture" id=3]
[ext_resource path="res://Menus/images/devil-deal.png" type="Texture" id=4]
[ext_resource path="res://Menus/images/crumble.png" type="Texture" id=5]
[ext_resource path="res://Menus/script/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://resources/font_adventurer_dynamic.tres" type="DynamicFont" id=7]
[ext_resource path="res://resources/assets/Font/Adventurer.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0980392, 0, 0.00392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.133333, 0.25098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleScreen" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/TitleScreen"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "COOL TITLE OF THE GAME"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="VBoxContainer/TitleScreen"]
margin_top = 62.0
margin_right = 1024.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 7 )
text = "Is that even possible?"
align = 1

[node name="BuildVersion" type="Label" parent="VBoxContainer/TitleScreen"]
margin_top = 82.0
margin_right = 1024.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 7 )
align = 1

[node name="MenuOptions" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 1024.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 175 )
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MenuOptions"]
margin_left = 412.0
margin_right = 612.0
margin_bottom = 178.0
rect_min_size = Vector2( 200, 0 )
alignment = 1

[node name="Start Game" type="Button" parent="VBoxContainer/MenuOptions/VBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../Exit")
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_right = NodePath("../Endless")
focus_neighbour_bottom = NodePath("../Endless")
custom_fonts/font = ExtResource( 7 )
text = "Start Game"

[node name="Endless" type="Button" parent="VBoxContainer/MenuOptions/VBoxContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 48.0
focus_neighbour_left = NodePath("../Start Game")
focus_neighbour_top = NodePath("../Start Game")
focus_neighbour_right = NodePath("../Tutorial")
focus_neighbour_bottom = NodePath("../Tutorial")
custom_fonts/font = ExtResource( 7 )
text = "Endless"

[node name="Leaderboard" type="Button" parent="VBoxContainer/MenuOptions/VBoxContainer"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 7 )
text = "Leaderboard"

[node name="Tutorial" type="Button" parent="VBoxContainer/MenuOptions/VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../Endless")
focus_neighbour_top = NodePath("../Start Game")
focus_neighbour_right = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Options")
custom_fonts/font = ExtResource( 7 )
text = "Tutorial"

[node name="Options" type="Button" parent="VBoxContainer/MenuOptions/VBoxContainer"]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 126.0
focus_neighbour_left = NodePath("../Tutorial")
focus_neighbour_top = NodePath("../Tutorial")
focus_neighbour_right = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Credits")
custom_fonts/font = ExtResource( 7 )
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer/MenuOptions/VBoxContainer"]
margin_top = 130.0
margin_right = 200.0
margin_bottom = 152.0
focus_neighbour_left = NodePath("../Options")
focus_neighbour_top = NodePath("../Options")
focus_neighbour_right = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Exit")
custom_fonts/font = ExtResource( 7 )
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer/MenuOptions/VBoxContainer"]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 178.0
focus_neighbour_left = NodePath("../Credits")
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_right = NodePath("../Start Game")
focus_neighbour_bottom = NodePath("../Start Game")
custom_fonts/font = ExtResource( 7 )
text = "Exit"

[node name="Icons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 311.0
margin_right = 1024.0
margin_bottom = 603.0
rect_min_size = Vector2( 0, 292 )

[node name="Panel" type="Panel" parent="VBoxContainer/Icons"]
margin_right = 1024.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Icons/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icons" type="HBoxContainer" parent="VBoxContainer/Icons/Panel/MarginContainer"]
margin_right = 1012.0
margin_bottom = 284.0
alignment = 1

[node name="Theme" type="TextureRect" parent="VBoxContainer/Icons/Panel/MarginContainer/Icons"]
margin_right = 250.0
margin_bottom = 284.0
rect_min_size = Vector2( 250, 284 )
texture = ExtResource( 3 )
expand = true

[node name="WildCard1" type="TextureRect" parent="VBoxContainer/Icons/Panel/MarginContainer/Icons"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 284.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 5 )
expand = true

[node name="WildCard2" type="TextureRect" parent="VBoxContainer/Icons/Panel/MarginContainer/Icons"]
margin_left = 508.0
margin_right = 758.0
margin_bottom = 284.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 4 )
expand = true

[node name="WildCard3" type="TextureRect" parent="VBoxContainer/Icons/Panel/MarginContainer/Icons"]
visible = false
margin_left = 512.0
margin_right = 762.0
margin_bottom = 284.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 2 )
expand = true

[node name="WildJamLogo" type="TextureRect" parent="VBoxContainer/Icons/Panel/MarginContainer/Icons"]
margin_left = 762.0
margin_right = 1012.0
margin_bottom = 284.0
rect_min_size = Vector2( 250, 284 )
texture = ExtResource( 1 )
expand = true

[connection signal="pressed" from="VBoxContainer/MenuOptions/VBoxContainer/Start Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/VBoxContainer/Endless" to="." method="_on_Endless_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
